WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302063
Null pointer dereference in LegacyWebArchive::protectedMainResource()
https://bugs.webkit.org/show_bug.cgi?id=302063
Summary
Null pointer dereference in LegacyWebArchive::protectedMainResource()
Sihui Liu
Reported
2025-11-05 20:33:50 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2025-11-05 20:33:59 PST
rdar://164088405
Sihui Liu
Comment 2
2025-11-05 20:51:00 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53505
EWS
Comment 3
2025-11-06 16:18:46 PST
Committed
302691@main
(581d4c4b6449): <
https://commits.webkit.org/302691@main
> Reviewed commits have been landed. Closing PR #53505 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug